# android-position-estimator

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/jni/: Android.mk
app/src/androidTest/java/com/mrjohn6774/androidpositionestimator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mrjohn6774/androidpositionestimator/: MainActivity.kt
app/src/main/java/com/mrjohn6774/androidpositionestimator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/mrjohn6774/androidpositionestimator/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs  vulkan.rs
src/: cube.rs  lib.rs  main.rs  plugins.rs
src/ffi/: sensor.rs
src/plugins/: camera.rs  sensor.rs  state.rs
