[package]
name = "android-position-estimator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
desktop = []

[[bin]]
name = "position_estimator"
path = "src/main.rs"
required-features = ["desktop"]

[lib]
name = "android_position_estimator"
crate_type=["cdylib", "lib"]

[dependencies]
bevy = "0.12.0"
bevy_panorbit_camera = "0.9.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
