[package]
name = "android-position-estimator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
desktop = []

[[bin]]
name = "position_estimator"
path = "src/main.rs"
required-features = ["desktop"]

[lib]
name = "android_position_estimator"
crate-type=["cdylib", "lib"]

[dependencies]
bevy = { version = "^0.16.1", default-features = false, features = [
    "android-native-activity",
    "android_shared_stdcxx",
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd",
] }
bevy-debug-text-overlay = { git = "https://github.com/JordanLloydHall/bevy-debug-text-overlay", branch = "upgrade_to_bevy_0_14" }
bevy_infinite_grid = "0.15.0"
bevy_panorbit_camera = "^0.27.1"
bevy_screen_diagnostics = "^0.8.1"
num = "^0.4.3"
num-derive = "^0.4.2"
num-traits = "^0.2.19"

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.4.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.android]
build_targets = ["aarch64-linux-android", "x86_64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 33
