[package]
name = "android-position-estimator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
winit = { version = "0.28", features = [ "android-native-activity" ] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"

[lib]
name="main"
crate_type=["cdylib"]
